--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/6.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/6.md
@@ -203,66 +203,66 @@ Vậy thì mình thử sử dụng `BFS` để duyệt tuần tự: `1 3 2 5 4`
 
 ## Câu 4
 
-> Trong những ngày cận Tết, cửa hàng kinh doanh thực phẩm phải vận chuyển hàng hóa từ nhà khoa chính `s` tới của hàng bán lẻ `t`. Do khoảng cách từ nhà kho chính đến cửa hàng bán lẻ khá xa, nên trong quá trình vận chuyển từ `s` tới `t`, xe phải ghé một số nhà kho khác để chuyển hàng qua xe khác để vận chuyển tiếp.
+> Quốc gia Peaceful và Savage đang chiến tranh. Quân đội của Peaceful tại thành phố `1` cần phải vận chuyển vũ khí qua thành phố `n` cần được bảo vệ. Các tuyến đường đi qua thành phố phải đi qua những tuyến đường trung gian, hơn nữa mỗi tuyến đường đều có trọng tải tối đa khác nhau. 
 > 
-> ::: warning ⚠️ LƯU Ý
-> 
-> - Có `n-2` nhà ko trên đường đi từ `s` tới `t`
-> 
-> - Trên mỗi con đường, bộ giao thông có đưa ra trọng tải cho phép khi xe qua, các xe chỉ có thể qua khi với trọng tải cho phép
-> :::
-> 
-> Hãy viết chương trình, kiểm tra trong quá trình vận chuyển hàng hóa từ nhà kho đến cửa hàng bán lẻ,các tài xế có làm đánh mất hàng hóa hay không ? 
+> Hãy viết chương trình kiểm tra sau đó vận chuyển vũ khí từ thành phố `1` sang thành phố `n` có phù hợp hay không 
 
 ::: tip 💡 GIẢI THÍCH
 
-Dễ hiểu ta sẽ đánh số như sau:
+**Đầu vào:**
+  
+  - Dòng dòng đầu tiên chứa `n` thành phố và `m` tuyến đường
 
-- Nhà kho chính : `s = 1`
+  - `m` dòng tiếp theo là danh sách các tuyến đường gồm : `u`, `v`, `x`, `y`, cho biết tuyến đường từ `u` đến `v`, trọng tải cho phép là `x` và trọng tải thực tế là `y`
 
-- Cửa hàng bán lẻ: `t = n`
+**Đầu ra:**
 
-- `n - 2` nhà kho còn lại được đánh số lần lượt là `2,3...,n-1`
+  - Nếu trọng lượng thực tế vận chuyển đường hợp lý và không bị mất hàng thì in `good plan`
 
-**Đầu vào**:
+  - Nếu trọng lượng thực tế vận chuyển đường không hợp lý hoặc bị mất hàng thì in `bad plan`
 
-  1. Dòng đầu tiên chứa `số địa điểm` và `số con đường từ điểm này tới điểm kia`
+**VÍ DỤ**:
 
-  2. Các dòng tiếp theo chứa 4 số `u`,`v`,`c`,`f` rằng : Đoạn đường từ nhà kho `u` tới `v`, cho phép `c` tấn và `f` là số tấn thực tế trên xe tải
-
-**Đầu ra**:
-
-  In ra màn hình :
-
-  1. `TOT`: nếu vận chuyển không mất hàng
-
-  2. `MAT HANG`: nếu tổng hàng hóa đến kho `u` không bằng lúc vận chuyển
-
-| Input                                                                                                                                  | Result   |
-| -------------------------------------------------------------------------------------------------------------------------------------- | -------- |
-| 6 8<br>1 2 12 10<br>1 4 10 8<br>2 3 10 6<br>2 5 4 4<br>3 4 8 1<br>4 5 12 9<br>3 6 5 5<br>5 6 18 13                                     | TOT      |
-| 6 8<br>1 2 12 10<br>1 4 10 8<br>2 3 10 6<br>2 5 4 4<br>3 4 8 1<br>4 5 12 5<br>3 6 5 0<br>5 6 18 9                                      | MAT HANG |
-| 7 12<br>1 2 10 10<br>4 2 10 0<br>4 6 7 1<br>4 5 10 4<br>2 3 10 2<br>2 6 7 6<br>6 3 7 0<br>6 5 7 7<br>3 5 10 0<br>3 7 10 2<br>5 7 15 11 | MAT HANG |
+| Input                                                                                                              | Output              |
+| ------------------------------------------------------------------------------------------------------------------ | ------------------- |
+| 7 10<br>1 2 9 3<br>1 3 4 4<br>1 4 8 2<br>2 3 4 1<br>2 6 3 3<br>3 7 7 4<br>4 5 5 2<br>5 3 3 0<br>5 7 2 2<br>6 7 6 3 | bad plan  |
+| 7 10<br>1 2 9 5<br>1 3 4 4<br>1 4 8 2<br>2 3 4 0<br>2 6 3 3<br>3 7 7 4<br>4 5 5 2<br>5 3 3 0<br>5 7 2 2<br>6 7 6 3 | bad plan  |
+| 7 10<br>1 2 9 3<br>1 3 4 4<br>1 4 8 2<br>2 3 0 4<br>2 6 3 3<br>3 7 7 4<br>4 5 5 2<br>5 3 3 0<br>5 7 2 2<br>6 7 6 3 | bad plan  |
+| 7 10<br>1 2 9 3<br>1 3 4 4<br>1 4 8 2<br>2 3 4 0<br>2 6 3 3<br>3 7 7 4<br>4 5 5 2<br>5 3 3 0<br>5 7 2 2<br>6 7 6 3 | good plan |
 
 :::
 
-### Phân tích
+### Phân tích 
 
-Hãy lấy mô hình số `2` là mô hình bị mất hàng để phân tích :
+Chúng ta sẽ lấy ví dụ `đúng` và `sai` (*cụ thể là ví dụ là `1` và `4`*)
 
-| Cho phép                                                                                                                                                                | Thực tế                                                                                                                                                                 |
+| Mô hình 1                                                                                                                                                               | Mô hình 4                                                                                                                                                               |
 | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/24-14-14-08-Screen%20Shot%202021-11-24%20at%2014.14.00.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/24-14-13-43-Screen%20Shot%202021-11-24%20at%2014.13.29.png"> |
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/30-21-35-29-Screen%20Shot%202021-11-30%20at%2021.35.23.png" width="375"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/30-21-34-33-Screen%20Shot%202021-11-30%20at%2021.34.25.png" width="400"> |
 
+::: warning ⚠️ LƯU Ý
 
-Nhìn sang bảng thực tế và phân tích các đường đi từ `1` tới `6`:
+Hãy nhìn mô hình `1` ở nút số `2` : vào `3` nhưng lại ra `3+1` = `4` ==> Sai (*check các trường hợp còn lại*)
 
-1. Nhánh `1-2-3-6`: 
+Ở mô hình `4` tổng vào và tổng ra đều là `2+4+3` và các nút còn lại cũng luồng ra và luồng vào như sau
+:::
 
-2. Nhánh `1-2-5-6`:
+::: tip 💡 MẸO
 
-3. Nhánh `1-4-5-6`:
-### Hàm cần dùng
+- **B1**: Nhập cung nhưng kiểm tra trọng tải
+  
+  > Nếu sai thì in ra `bad plan` và `return 0`
+
+- **B2**: Kiểm tra luồng vào của nút `n` và luồng ra của nút `1`
+
+  > Nếu không bằng nhau thì in ra `bad plan` và `return 0`
+
+- **B3**: Kiểm tra luồng vào và ra của các nút còn lại 
+
+  > Nếu có nút nào luồng vào và ra không bằng nhau thì in ra `bad plan` và `return 0`
+
+- **B4**: In ra `good plan` khi các trường hợp trên sai
+:::
 
 ### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau4LTDT)
 
