--- a/docs/devbook/jquery/1.md
+++ b/docs/devbook/jquery/1.md
@@ -1,6 +1,46 @@
 # Bài 1: Giới thiệu Jquery
 
-## 1.
+## 1. Jquery là gì ?
+
+`jQuery` là thư viện được viết từ `JavaScript`, giúp bạn viết code `Javascript` một cách dễ dàng và nhanh chóng hơn được tạo ra bởi [John Resig](https://en.wikipedia.org/wiki/John_Resig) vào năm `2006`
+
+> Đến nay là phiên bản [3.6.0](https://code.jquery.com/) vào năm `2021`
+
+Tải và cài đặt `Jquery` [tại đây](https://code.jquery.com/)
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/12/03-13-58-05-Screen%20Shot%202021-12-03%20at%2013.57.59.png">
+
+::: tip 💡 MẸO
+
+Có rất nhiều cách như cài bằng `npm`, `cdn`, `bower`, `yarn`
+
+Tuy nhiên mình để cho dễ dàng nhất các bạn nên cài bằng `cdn`, bằng cách chèn đường link như sau:
+
+```html
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+```
+
+> Có thể sẽ có những bản mới hơn tại đây, hãy nhắc mình ở comment để cập nhật lại nhé
+:::
+
+::: danger ✔️ KIỂM TRA
+
+Mỗi khi `import` một thứ gì đó, chúng ta phải kiểm tra xem nó đã thành công không, ở `Web` chúng ta sẽ dùng tính năng `Deverloper Tool` của trình duyệt như sau:
+
+- **B1**: Sau khi vào trang web, bấm `F12` hoặc `Chuột phải → Inspect`
+
+  > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/12/03-14-52-08-Screen%20Shot%202021-12-03%20at%2014.51.44.png">
+
+- **B2**: Sau khi hiện cửa sổ, hãy chọn tab `Console` và kiểm tra xem có lỗi không
+
+  > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/12/03-14-55-20-Screen%20Shot%202021-12-03%20at%2014.54.44.png">
+
+- **B3**: Qua tab `Source` và kiểm tra, thư viện đã tải về chưa và đúng không
+
+  > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/12/03-14-57-18-Screen%20Shot%202021-12-03%20at%2014.56.19.png">
+:::
+
+## 2. Ví dụ đầu tiên
 
 Đầu tiên hãy tạo một file `HTML` như sau:
 
@@ -17,18 +57,18 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script>
         $(document).ready(function() {
-            $('#hello').text("Hello World");
+            $('#hello').text("Hello World")
         })
     </script>
 </body>
 </html>
 ```
 
-> Chạy thử nó trên []
+> Chạy thử nó [tại đây](https://replit.com/@Zenfection/jqueryexample1#index.html)
 
-::: tip GIẢI THÍCH
+::: tip 💡 GIẢI THÍCH
 
-1. Load thư viện `Jquery` từ [CDN](https://code.jquery.com/)
+-  Load thư viện `Jquery` từ [CDN](https://code.jquery.com/)
   
   ```html:no-line-numbers
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -36,25 +76,66 @@
   
   > Hãy chắc rằng, bạn thư viện `Jquery` của bạn đã load thành công
 
-2. Trước khi chạy `Jquery` hãy xác định nó bằng dòng sau đây:
+- Trước khi chạy `Jquery` hãy xác định nó bằng dòng sau để xác định cấu trúc `DOM`
 
   ```js:no-line-numbers
   $(document).ready(function() { ... })
   ```
 
-  Và bạn cũng có thể viết gọn như sau:
+  > Và bạn cũng có thể viết gọn như sau:
+  >
+  > ```js:no-line-numbers
+  > $(function () { ... })
+  > ```
 
-  ```js:no-line-numbers
-  $(function () { ... })
-  ```
+- Khi `DOM` đã được sẵn sàng, `jQuery` thực hiện **callback** các hàm bên trên,thực hiện 2 việc chính:
+
+  1. Chọn tất cả `id` là `hello` bằng lệnh `$('#hello')`, Hãy tham khảo các `Selectors` trong [bài 2](/devbook/jquery/2.md)
+
+  2. Lệnh `text()` để đổi văn bản bên trong
 :::
 
-## 2.
+## 3. Vấn đề xung đột
 
-## 3.
+Như bạn đã thấy bên trên, `jquery` sử dụng dấu `$` làm bí danh, đều này sẽ khiến cho xung đột trong một số `FrameWork` nhất định như là [Angular](https://angular.io/)...
 
-## 4.
+::: tip 💡 GIẢI QUYẾT
 
-## 5.
+- Chúng ta sẽ dùng hàm `jQuery.noConflict();` 
 
-## 6.
+- Hoặc sẽ tạo một bí danh cá nhân của mình để thay thế cho `$` như sau:
+
+```js
+let jqy = jQuery.noConflict()
+jqy(document).ready(functino() {
+  jqy('#hello').text("Hello World")
+})
+```
+
+> Tham khảo [tại đây](https://replit.com/@Zenfection/jqueryexample2#index.html)
+:::
+
+::: warning ⚠️ LƯU Ý
+
+1. Nhưng nếu bạn thật sự muốn dùng dấu `$` làm bí danh, hãy thực hiện như sau:
+
+  ```js
+  jQuery(function( $ )) { //DOM đã sẵn sàng
+    // và giờ bạn có thể sử dụng dấu `$` làm bí danh 
+    // mà không lo xung đột
+    $('#hello').text("Hello World")
+  }
+```
+
+  > Tham khảo [tại đây](https://replit.com/@Zenfection/jqueryexample2#index2.html)
+
+2. Nếu bạn không muốn `$` hay `jQuery` làm bí danh của bạn, mà chỉ duy nhất tên thứ `3`, hãy làm như sau:
+
+  ```js
+  let jqy = jQuery.noConflict(true);
+  ```
+
+  > Tham khảo [tại đây](https://replit.com/@Zenfection/jqueryexample2#index3.html)
+:::
+
+<comment/>
