--- a/docs/devbook/jquery/2.md
+++ b/docs/devbook/jquery/2.md
@@ -9,8 +9,8 @@
 Tham khảo các ví dụ như sau:
 
 - **Bộ chọn cơ bản**:
-
-  ```js
+  
+  ```js:no-line-numbers
   $("\*")                   // Tất cả thẻ
   $("div")                  // Tất cả thẻ <div>
   $(".blue")                // Tất cả thẻ có class="blue"
@@ -22,13 +22,40 @@ Tham khảo các ví dụ như sau:
   ```
 
 - **Bộ chọn toán tử quan hệ**
-
-  ```js
+  
+  ```js:no-line-numbers
   $("div span")      // Tất cả thẻ span nằm bên trong của thẻ div
   $("div > span")    // Tất cả thẻ span là con chính của thẻ div
   $("a ~ span")     // Tất cả thẻ span là cùng cấp với thẻ a
   $("a + span")      // Tất cả thẻ span phía sau kế bên thẻ a
   ```
-:::
+  
+  :::
 
 ## 1. Các kiểu Selectors
+
+Trong `Jquery` bạn có thể chọn thẻ bằng rất nhiều cách khác nhau để phù hợp với mục đích của mình bao gồm : `Type`, `Class`, `ID`, `Attribute`, `Indexed Selector`, `Pseudo-state`
+
+Chọ một đoạn code đơn giản sau:
+
+```html
+<a href="index.html"></a>
+<a id="second-link"></a>
+<a class="example"></a>
+<a class="example" href="about.html"></a>
+<span class="example"></span>
+```
+
+| Kiểu chọn         | Jquery                      | Mô tả                                               | Ảnh hưởng  |
+| ----------------- | --------------------------- | --------------------------------------------------- | ---------- |
+| Type              | **\$("a")**                 | Chọn tất cả thẻ `a`                                 | 1, 2, 3, 4 |
+| Class             | **\$(".example")**          | Chọn tất cả thẻ có<br>`class="example"`                | 3, 4, 5    |
+| ID                | **\$("#second-link")**      | Chọn tất cả thẻ có<br>`id="second-link"`               | 2          |
+| Attribute         | **\$("[href]")**            | Chọn tất cả thẻ có<br>thuộc tính `href`                | 1, 4       |
+| Attribute Value   | **\$("href='index.html'")** | Chọn tất cả thẻ có<br>thuộc tính `href="index.html"`   | 1          |
+| Indexed           | **\$("a:eq(1)")**           | Chọn thẻ `a` thứ `2`<br>⚠️ Bắt đầu từ `0`           | 2          |
+| Indexed Exclusion | **\$("a").not(:eq(0))**     | Chọn tất cả thẻ `a`<br>ngoại trừ thẻ `a` **đầu tiên** | 2, 3, 4    |
+| Exclusion         | **\$("a:not(.example)")**   | Chọn tất cả thẻ `a`<br>không chứa `class="example"`    | 1,2        |
+
+
+> Tham khảo code [tại đây](https://replit.com/@Zenfection/jqueryexample3#index.html)
