--- a/docs/devbook/jquery/2.md
+++ b/docs/devbook/jquery/2.md
@@ -46,16 +46,167 @@ Chọ một đoạn code đơn giản sau:
 <span class="example"></span>
 ```
 
-| Kiểu chọn         | Jquery                      | Mô tả                                               | Ảnh hưởng  |
-| ----------------- | --------------------------- | --------------------------------------------------- | ---------- |
-| Type              | **\$("a")**                 | Chọn tất cả thẻ `a`                                 | 1, 2, 3, 4 |
-| Class             | **\$(".example")**          | Chọn tất cả thẻ có<br>`class="example"`                | 3, 4, 5    |
-| ID                | **\$("#second-link")**      | Chọn tất cả thẻ có<br>`id="second-link"`               | 2          |
-| Attribute         | **\$("[href]")**            | Chọn tất cả thẻ có<br>thuộc tính `href`                | 1, 4       |
-| Attribute Value   | **\$("href='index.html'")** | Chọn tất cả thẻ có<br>thuộc tính `href="index.html"`   | 1          |
-| Indexed           | **\$("a:eq(1)")**           | Chọn thẻ `a` thứ `2`<br>⚠️ Bắt đầu từ `0`           | 2          |
-| Indexed Exclusion | **\$("a").not(:eq(0))**     | Chọn tất cả thẻ `a`<br>ngoại trừ thẻ `a` **đầu tiên** | 2, 3, 4    |
-| Exclusion         | **\$("a:not(.example)")**   | Chọn tất cả thẻ `a`<br>không chứa `class="example"`    | 1,2        |
+### Cơ bản
+
+| Kiểu chọn       | Jquery                      | Mô tả                                                | Ảnh hưởng  |
+| --------------- | --------------------------- | ---------------------------------------------------- | ---------- |
+| Type            | **\$("a")**                 | Chọn tất cả thẻ `a`                                  | 1, 2, 3, 4 |
+| Class           | **\$(".example")**          | Chọn tất cả thẻ có<br>`class="example"`              | 3, 4, 5    |
+| ID              | **\$("#second-link")**      | Chọn tất cả thẻ có<br>`id="second-link"`             | 2          |
+| Attribute       | **\$("[href]")**            | Chọn tất cả thẻ có<br>thuộc tính `href`              | 1, 4       |
+| Attribute Value | **\$("href='index.html'")** | Chọn tất cả thẻ có<br>thuộc tính `href="index.html"` | 1          |
 
 
-> Tham khảo code [tại đây](https://replit.com/@Zenfection/jqueryexample3#index.html)
+### Kiểu chỉ mục
+
+Chúng ta có thể chọn chỉ một thẻ bằng cách nêu thứ tự của nó 
+
+::: warning ⚠️ LƯU Ý
+
+Bắt đầu từ `0`   
+:::
+
+| Kiểu chọn         | Code Jquery                 | Mô tả                                                 | Ảnh hưởng     |
+| ----------------- | --------------------------- | ----------------------------------------------------- | ------- |
+| Indexed           | **\$("a:eq(1)")**           | Chọn thẻ `a` thứ `2`                                  | 2       |
+| Indexed Exclusion | **\$("a").not(:eq(0))**     | Chọn tất cả thẻ `a`<br>ngoại trừ thẻ `a` **đầu tiên** | 2, 3, 4 |
+| Exclusion         | **\$("a:not(.example)")**   | Chọn tất cả thẻ `a`<br>không chứa `class="example"`   | 1,2     |
+
+
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="30">[CHẠY THỬ](https://replit.com/@Zenfection/jqueryexample3#index.html)
+
+### Pseudo-State
+
+Chúng ta có thể chọn bằng các lớp giả như `:first-of-type`, `last-of-type`...
+
+```js:no-line-numbers
+$("a:frist-of-type")  // chọn thẻ a đầu tiên ==> Ảnh hưởng 1
+```
+
+### Kết hợp 
+
+Chúng ta có thể kết hợp nhiều bộ chọn lại với nhau, chẳng hạn như sau:
+
+```js:no-line-numbers
+$("a.class1.class2.class3#someID[attr1][attr2='something'][attr3='something]:first-of-type:first-of-child")
+```
+
+::: tip 🤔 GIẢI THÍCH
+
+Chọn tất cả thẻ `a` có tiêu chí như sau:
+
+- Có `class="class1 class2 class3"`
+
+- Có `id="someID"`
+
+- Có thuộc tính `attr1`, `attr2='something'` và `attr3='something'`
+
+- Có vị trí ở **đầu tiên** và thẻ con **đầu tiên**
+:::
+
+::: warning ⚠️ LƯU Ý
+
+Bạn cũng có thể tách các bộ chọn ra bởi dấu `,`
+
+```js:no-line-numbers
+$("a, .class1, #someID")
+```
+
+- Chọn tất cả thẻ `a`
+
+- Chọn tất cả thẻ có `class="class1"`
+
+- Chọn tất cả thẻ có `id="someID"`
+:::
+
+### Toán tử quan hệ
+
+Bạn có thể dùng các toán tử quan hệ để chọn ra các thẻ `con` hoặc `anh em` của nó như sau:
+
+| Toán tử  | Ví dụ        | Ý nghĩa                                    |
+| -------- | ------------ | ------------------------------------------ |
+| dấu cách | **div a**    | Chọn tất cả thẻ `a` bên trong thẻ `div`    |
+| `>`      | **div > a**  | Chọn tất cả thẻ `a` là con của thẻ `div`   |
+| `+`      | **div + a**  | Chọn 1 thẻ `a` liền kề với thẻ `div`       |
+| `~`      | **div \~ a** | Chọn tất cả thẻ `a` cùng cấp với thẻ `div` |
+
+### Wildcard
+
+Trong trường hợp chúng ta muốn chọn tất cả thẻ nhưng không có `class` hay `id` chúng nào chúng ta có thể dùng như sau:
+
+```js:no-line-numbers
+$('#wrapper *')   //chọn tất cả thể bên trong thẻ có id="wrapper"
+```
+
+## 2. Đặt biến 
+
+Đôi lúc bạn sẽ dùng `jquery selector` nhiều lần trên cùng một đối tượng như: 
+
+```js:no-line-numbers
+$('navigation').show()
+```
+
+==> Điều này sẽ làm cho bạn rất dễ sai sót và gây mất thời gian, dễ dàng trong việc `Debug` sau này, hãy làm thế này
+
+```js:no-line-numbers
+let nav = $('#navigation')
+nav.show()
+```
+
+::: tip 💡 MẸO
+
+Nhiều nhà phát triển sẽ quy định tên biến bắt đầu bằng `$` để biết nó là 1 biến của `Jquery Selector`
+
+```js:no-line-numbers
+let $nav = $('#navigation')
+```
+:::
+
+::: warning ⚠️ LƯU Ý
+
+Nếu bạn gán 1 biến `Jquery Selector` không tồn tại, thì bên trong nó sẽ là **rỗng**
+
+```html
+<div class="parent"></div>
+
+<script>
+  let parent = $('.parent')
+  let children = $('.child')
+  console.log(children)
+
+  //OUTPUT: []
+
+  parent.append('<div class="child">Child 1</div>')
+  children = $('.child')
+  console.log(children[0].text)
+
+  //OUTPUT: "Child 1"
+</script>
+```
+:::
+
+## 3. Kết hợp bộ chọn
+
+Hãy nhìn cấu trúc `DOM` dưới đây
+
+```html
+<ul class="parentUl">
+  <li> Level 1
+    <ul class="childUl">
+      <li>Level 1-1 <span> Item - 1 </span></li>
+      <li>Level 1-1 <span> Item - 2 </span></li>
+    </ul>
+  </li>
+  <li> Level 2
+    <ul class="childUl">
+      <li>Level 2-1 <span> Item - 1 </span></li>
+      <li>Level 2-1 <span> Item - 1 </span></li>
+    </ul>
+  </li>
+</ul>
+```
+
+### Bộ chọn quan hệ cha con
+
+1. 
