--- a/docs/devbook/jquery/2.md
+++ b/docs/devbook/jquery/2.md
@@ -1,4 +1,4 @@
-# Bài 2. Selectors
+# Bài 2: Selectors
 
 > Như bạn đã biết thì [bài trước](/devbook/jquery/1.md) chúng ta có lệnh `$('#hello')` để chọn tất cả thẻ có `id="hello"` đó gọi là bộ chọn (`selectors`)
 
@@ -201,12 +201,42 @@ Hãy nhìn cấu trúc `DOM` dưới đây
   <li> Level 2
     <ul class="childUl">
       <li>Level 2-1 <span> Item - 1 </span></li>
-      <li>Level 2-1 <span> Item - 1 </span></li>
+      <li>Level 2-1 <span> Item - 2 </span></li>
     </ul>
   </li>
 </ul>
 ```
 
-### Bộ chọn quan hệ cha con
+Từ cha (`<ul>` *hoặc* `.parentUl`), ta có thể chọn các con của nó (`<li>` *hoặc* `<childUl>`) bằng 1 trong cách sau:
 
-1. 
+1. Cấu trúc `$('parent child')`  : Chọn tất cả lớp `child` bên trong lớp `parent`
+
+  ```js:no-line-numbers
+  $('ul.parentUl li')   
+  ```
+
+2. Cấu trúc `$('parent > child')`: Chọn tất cả `child` bên trong `parent` (*chỉ `child` đầu tiên*)
+
+  ```js:no-line-numbers;
+  $('ul.parentUl > li') 
+  ```
+
+3. Cấu trúc `$('child', 'parent')`: Chọn tất cả `parent` và `child`
+
+  ```js:no-line-numbers
+  $('li', 'ul.parentUl')
+  ```
+
+4. Dùng hàm `find()`; Cấu trúc `$('parent').find('child')` (*Giống cách `1`*)
+
+  ```js:no-line-numbers
+  $('ul.parentUl').find('li')
+  ```
+
+5. Dùng hàm `children()`; Cấu trúc `$('parent').chidlren('child')` (*Giống cách `2`*)
+
+  ```js:no-line-numbers
+  $('ul.parentUl').children('li')
+  ```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="30"> [CHẠY THỬ](https://replit.com/@Zenfection/jqueryexample4#index.html)
