--- a/docs/devbook/jquery/3.md
+++ b/docs/devbook/jquery/3.md
@@ -1,1 +1,85 @@
-# Bài 3. Function
+# Bài 3: Attributes
+
+## 1. Sự khác nhau giữa `attr()` và `prop()`
+
+Cả 2 từ `Attribute` và `Property` đều có nghĩa là thuộc tính nhưng nó sẽ có đôi chút khác nhau, muốn biết về nó bạn phải hiểu khác niệm về `DOM Properties` và `HTML Attributes`
+
+| Properties                                          | Attributes                                                 |
+| --------------------------------------------------- | ---------------------------------------------------------- |
+| Được xác định bởi `DOM`                             | Được xác định bởi `HTML`                                   |
+| **Property** có thể thay đổi                        | **Attribute** không thể thay đổi<br>(*trừ khi can thiệp* `JS`) |
+| Khi thay đổi **Property**, chưa chắc **Attribute** thay đổi | Khi thay đổi **Attribute** thì **Property** sẽ thay đổi tương ứng  |
+| Phân biệt hoa thường                                | Không phân biệt hoa thường                                 |
+| Có nhiều kiểu dữ liệu                               | Chỉ có kiểu string                                         |
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="30"> [KHAM THẢO VÍ DỤ SAU](https://replit.com/@Zenfection/jqueryexample5#index.html)
+
+- Để cho dễ hiểu ta sẽ lấy ví dụ thay đổi thuộc tính `checked` có giá trị là `true`  như sau:
+
+```js:no-line-numbers
+$('tos').prop('checked', true);   //Sử dụng attr() thì property sẽ không hoạt động
+```
+
+::: tip 💡 KIẾN THỨC
+
+Để xoá một **Property**, sử dụng hàm `removeProp()` tương tự với `removeAttr()` để xoá **Attribute**
+:::
+
+==> Tham khảo [Phân biệt attr() và prop()](https://viblo.asia/p/phan-biet-attr-va-prop-trong-jquery-GrLZD7dVKk0)
+## 2. Lấy giá trị Attribute của một thẻ trong `HTML`
+
+Khi một tham số truyền vào hàm `attr()` sẽ trả về giá trị của thuộc tính đã chọn
+
+**Cú pháp** : `$([selector]).atrr([attribute name])`
+
+```html:no-line-numbers
+<a href="/home">Home</a> 
+```
+
+```js:no-line-numbers
+$('a').attr('href') // trả về `/home`
+```
+
+
+Hàm `attr` chỉ trả về kiểu chuỗi, vậy nên chúng ta sẽ dùng hàm `data()` cho những giá trị số như sau:
+
+**Cú pháp:** `$([selector]).data([attribute name])`
+
+```html:no-line-numbers
+<article data-column="3"></article>
+```
+
+```js:no-line-numbers
+$("article").data("column") //trả về 3
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="30">[CHẠY THỬ](https://replit.com/@Zenfection/jqueryexample6#index.html)
+
+::: warning LƯU Ý
+
+Hàm `data()` cho phép truy cập thuộc tính dạng `data-*`, nhưng nếu nó gây cản trở cho `attribute name` bạn hãy dùng hàm `attr(data-*)`
+:::
+
+==> Tham khảm [phân biệt attr() và data()](https://viblo.asia/p/phan-biet-attr-va-prop-trong-jquery-GrLZD7dVKk0)
+
+### 3. Đặt giá trị cho thuộc tính `HTML`
+
+Nếu bạn muốn thêm bất kỳ **Attributes** nào vào thẻ `HTML` hãy sử dụng :
+
+**Cú pháp**: `attr(attrbuteName, attributeValue)`
+
+```js:no-line-numbers
+$('a').attr('title', 'Click Me')
+```
+
+==> Nó sẽ thêm một thuộc tính `title="Click Me"` vào tất cả thẻ `a` (*hãy di chuột vào sẽ thấy*)
+
+### 4. Xoá thuộc tính
+
+Hãy sử dụng hàm `removeAttr(attributeName)` để xoá thuộc tính mà bạn muốn
+
+```js:no-line-numbers
+$('.home').removeAttr('title')
+```
+
+==> Có nghĩa là xoá thuộc tính `title` cho tất cả các lớp `home`
