--- a/docs/devbook/jquery/2.md
+++ b/docs/devbook/jquery/2.md
@@ -240,3 +240,82 @@ Từ cha (`<ul>` *hoặc* `.parentUl`), ta có thể chọn các con của nó (
   ```
 
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="30"> [CHẠY THỬ](https://replit.com/@Zenfection/jqueryexample4#index.html)
+
+## 4.`DOM Elements` và `HTML String`
+
+`jQuery` chấp nhận nhiều tham số và một trong số chúng là `DOM Elements` và `HTML Strings`.
+
+### `DOM Elements`
+
+- Việc sử dụng `DOM Elements` rất phổ bến trong `callback`, nơi mà `jQuery constructor` có quyền truy cập vào `jQuery API`
+
+- `jQuery` sẽ phát hiện đối tượng `DOM` bằng cách **inspect** `nodeType` của nó
+
+Chẳng hạn như đoạn code sau:
+
+```js:no-line-numbers
+$('.elements').each(function (){
+  // thẻ hiện tại đang chọn sẽ được liên kết với con trỏ this  
+  let currentElement = this
+  // tại thời điển này thì biến currentElement có quyền truy cập vào API gốc
+
+  //tạo một đối tượng jQuery với currentElement(this)
+  let $currentElement = $(this)
+  // biến $currentElement có quyền truy cập vào jQuery API
+})
+```
+
+### `HTML Strings`
+
+- Để khởi tạo một code `HTML`, jQuery dùng các `regex` để xác định xem nó có phải là một chuỗi `HTML` hay không ? 
+
+::: tip 💡 MẸO
+
+Chuỗi `regex` phải bắt đầu bằng `<`, được định nghĩa như sau: `/^(?:\s*(<[\w\W]+>)[^>]*|#([\w-]*))$/`
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="30"> [THAM KHẢO TẠI ĐÂY](https://regex101.com/r/wF0rZ0/1)
+
+Thường được sử dụng trong việc thêm các `Modal` mới trong trang web
+:::
+
+**VÍ DỤ**:
+
+```js:no-line-numbers
+function template(href, text){
+  $("<div><a href='" + href + "'>" + text + "</a></div>");
+}
+```
+
+> Truyền tham số ==> `template("google.com", "Google")`
+
+==> Nó sẽ tạo ra một đoạn code `HTML` như sau:
+
+```html:no-line-numbers
+<div>
+  <a href="google.com">Google</a>
+</div>
+```
+
+## 5. Each Function
+
+Cho các đoạn code sau:
+
+```html
+<ul>
+  <li>Mango</li>
+  <li>Book</li>
+</ul>
+```
+
+```js
+$('li').each(function ( i ) {
+  console.log( i + ": " + $( this ).text())
+})
+```
+
+==> Kết quả như sau:
+
+```txt
+0: Mango
+1: Book
+```
