--- a/docs/devbook/jquery/3.md
+++ b/docs/devbook/jquery/3.md
@@ -62,7 +62,7 @@ Hàm `data()` cho phép truy cập thuộc tính dạng `data-*`, nhưng nếu n
 
 ==> Tham khảm [phân biệt attr() và data()](https://viblo.asia/p/phan-biet-attr-va-prop-trong-jquery-GrLZD7dVKk0)
 
-### 3. Đặt giá trị cho thuộc tính `HTML`
+## 3. Đặt giá trị cho thuộc tính `HTML`
 
 Nếu bạn muốn thêm bất kỳ **Attributes** nào vào thẻ `HTML` hãy sử dụng :
 
@@ -74,7 +74,7 @@ $('a').attr('title', 'Click Me')
 
 ==> Nó sẽ thêm một thuộc tính `title="Click Me"` vào tất cả thẻ `a` (*hãy di chuột vào sẽ thấy*)
 
-### 4. Xoá thuộc tính
+## 4. Xoá thuộc tính
 
 Hãy sử dụng hàm `removeAttr(attributeName)` để xoá thuộc tính mà bạn muốn
 
