--- a/docs/devbook/jquery/4.md
+++ b/docs/devbook/jquery/4.md
@@ -1,1 +1,224 @@
 # Bài 4: document-ready event
+
+## 1.Khái niệm và cách sử dụng
+
+Code của `jQuery` thường nằm trong `(function($) { ... })` để nó chạy khi `DOM` tải hoàn thành.
+
+```html:no-line-numbers
+<script>
+  jQuery(function($) {
+    $("#myDiv").text("Hello");
+    // tất cả thẻ có id="myDiv" đều thay đổi nội dung là "Hello"
+  });
+</script>
+```
+
+
+::: danger 🚨 CẢNH BÁO
+
+Nếu bạn không có dòng `function($){...}` thì bạn không thể chọn phần tử `DOM` vì nó chưa được tải như sau:
+
+```html:no-line-numbers
+<script>
+  $("#myDiv").text("Hello");
+  // thời điểm này thì id="myDiv" chưa được tải lên DOM
+  // nên mọi thao tác bạn đều vô hiệu
+</script>
+```
+:::
+
+::: warning ⚠️ LƯU Ý
+
+- Bạn có thể đặt bí danh cho `jQuery` bằng hàm `ready()`, rất hữu dụng trong việc một thư viện `JS` khác sử dụng `$` làm bí danh.
+
+- Để tránh sự xung đột này, bạn phải sử dụng hàm `$.noConflict()`, nó chỉ có thể sử dụng trên không gian của hàm `jQuery`
+
+```js:no-line-numbers
+$.noConflict();
+jQuery( document ).ready(function( $ ){
+  // ta có thể sử dụng $ làm bí danh 
+  // mà không xung đột với bí danh của thư viện khác
+  $('body').append('<div>Hello</div>')
+})
+
+jQuery( document ).ready(function( jq ) {
+  //ta sử dụng jq làm bí danh của jQuery
+  jq('body').append('<div>Hello</div>')
+});
+```
+:::
+
+::: tip 💡 MẸO 
+
+Thay vì code `jQuery` ở cuối trang, hãy sử dụng `$(document).ready(function(){...})`, để chờ đến khi `DOM` tải xong rồi code `jQuery` mới được thực thi
+:::
+
+## 2. jQuery `2.2.3` và trước đó
+
+`jQuery` chỉ chạy khi tất cả cấu trúc `DOM` đều sẵn sàng
+
+```js:no-line-numbers
+$(function() {
+  // code
+});
+```
+
+```js:no-line-numbers
+$().ready(function() {
+  // code
+});
+```
+
+```js:no-line-numbers
+$(document).ready(function() {
+  // code
+});
+```
+
+::: tip 💡 KHUYẾT KHÍCH
+
+Vì cả 3 cách trên tương đương nhau, nên cách đầu tiên được khuyết khích sử dụng từ khóa `jQuery` thay cho `$`:
+
+```js:no-line-numbers
+jQuery(function() {
+// code
+});
+```
+:::
+
+## 3. jQuery `3.0`
+
+### Ký hiệu
+
+Ở `jQuery 3.0` đây là mẫu khuyết khích sử dụng: 
+
+```js:no-line-numbers
+jQuery(function($) {
+  // Chạy khi DOM sẵn sàng
+  // đối số $ (đầu tiên) sẽ tham chiếu nội bộ đến jQuery
+  // không dựa vào $ tham chiếu tới jQuery trong global namespace
+});
+```
+
+> Tham khảo [document-ready handlers trong jQuery 3.0](https://jquery.com/upgrade-guide/3.0/#deprecated-document-ready-handlers-other-than-jquery-function)
+
+### Không đồng bộ
+
+As of jQuery 3.0, the ready handler [will always be called asynchronously](https://jquery.com/upgrade-guide/3.0/#breaking-change-document-ready-handlers-are-now-asynchronous). This means that in the code below, the log
+'outside handler' will always be displayed first, regardless whether the document was ready at the point of
+execution.
+
+```js
+$(function() {
+console.log("inside handler");
+});
+console.log("outside handler");
+```
+
+> outside handler
+> 
+> inside handler
+
+## 4. 
+
+Example uses of $(document).ready():
+
+### 1. Attaching event handlers
+
+  Attach jQuery event handlers
+
+  ```js
+  $(document).ready(function() {
+  $("button").click(function() {
+  // Code for the click function  
+  });
+  });
+  ```
+
+### 2. Run jQuery code after the page structure is created
+
+```js
+jQuery(function($) {
+  // set the value of an element.
+  $("#myElement").val("Hello");
+});
+```
+
+### 3. Manipulate the loaded DOM structure
+
+For example: hide a div when the page loads for the first time and show it on the click event of a button
+
+```js
+$(document).ready(function() {
+$("#toggleDiv").hide();
+$("button").click(function() {
+$("#toggleDiv").show();
+});
+});
+```
+
+## 5.
+
+`$(window).load()` was deprecated in jQuery version 1.8 (and completely removed from jQuery 3.0) and as
+such should not be used anymore. The reasons for the deprecation are noted on the [jQuery page about this event](http://api.jquery.com/load-event/)
+
+> Caveats of the load event when used with images
+>
+> A common challenge developers attempt to solve using the .load() shortcut is to execute a function when an image (or collection of images) have completely loaded. There are several known caveats with this that should be noted. These are:
+>
+> - It doesn't work consistently nor reliably cross-browser
+> 
+> - It doesn't fire correctly in WebKit if the image src is set to the same src as before
+> 
+> - It doesn't correctly bubble up the DOM tree
+>
+> - Can cease to fire for images that already live in the browser's cache
+
+If you still wish to use load() it is documented below:
+
+$(document).ready() waits until the full DOM is availble -- all the elements in the HTML have been parsed and are
+in the document. However, resources such as images may not have fully loaded at this point. If it is important to
+wait until all resources are loaded, $(window).load() and you're aware of the significant limitations of this
+event then the below can be used instead:
+
+```js
+$(document).ready(function() {
+console.log($("#my_large_image").height()); // may be 0 because the image isn't available
+});
+$(window).load(function() {
+console.log($("#my_large_image").height()); // will be correct
+});
+```
+
+## 6
+
+Using the document-ready event can have small [performance drawbacks](http://stackoverflow.com/q/9557846/938297), with delayed execution of up to ~300ms.
+Sometimes the same behavior can be achieved by execution of code just before the closing `</body>` tag:
+
+```html
+<body>
+<span id="greeting"></span> world!
+<script>
+$("#greeting").text("Hello");
+</script>
+</body>
+```
+
+will produce similar behavior but perform sooner than as it does not wait for the document ready event trigger as it
+does in:
+
+```html
+<head>
+<script>
+jQuery(function($) {
+$("#greeting").text("Hello");
+});
+</script>
+</head>
+<body>
+<span id="greeting"></span> world!
+</body>
+```
+
+Emphasis on the fact that first example relies upon your knowledge of your page and placement of the script just
+prior to the closing `</body>` tag and specifically after the span tag.
