--- a/docs/devbook/jquery/6.md
+++ b/docs/devbook/jquery/6.md
@@ -1,1 +1,6 @@
-# Bài 6: Event
+# Bài 6: Cấu trúc DOM
+
+## 1: Creating DOM elements 
+## 2: Manipulating element classes 
+
+## 3: Other API Methods
