--- a/docs/devbook/jquery/8.md
+++ b/docs/devbook/jquery/8.md
@@ -1,1 +1,9 @@
-# Bài 8: DOM
+# Bài 8: Cấu trúc CSS
+
+## 1: CSS – Getters and Setters 
+
+## 2: Increment/Decrement Numeric 
+Properties 
+## 3: Set CSS property 
+
+## 4: Get CSS property
