--- a/docs/devbook/jquery/7.md
+++ b/docs/devbook/jquery/7.md
@@ -1,1 +1,17 @@
-# Bài 7: Cấu trúc DOM
+# Bài 7: DOM Travering
+
+## 1: Select children of element 
+
+## 2: Get next element 
+
+## 3: Get previous element 
+
+## 4: Filter a selection 
+
+## 5: find() method 
+
+## 6: Iterating over list of jQuery elements 
+
+## 7: Selecting siblings
+
+## 8: closest() method
