--- a/docs/devbook/jquery/4.md
+++ b/docs/devbook/jquery/4.md
@@ -104,13 +104,11 @@ jQuery(function($) {
 
 ### Không đồng bộ
 
-As of jQuery 3.0, the ready handler [will always be called asynchronously](https://jquery.com/upgrade-guide/3.0/#breaking-change-document-ready-handlers-are-now-asynchronous). This means that in the code below, the log
-'outside handler' will always be displayed first, regardless whether the document was ready at the point of
-execution.
+Kể từ `jQuery 3.0` trở đi, `ready handler` sẽ luôn gọi là [không đồng độ](https://jquery.com/upgrade-guide/3.0/#breaking-change-document-ready-handlers-are-now-asynchronous). Ví như như code dưới đây
 
 ```js
 $(function() {
-console.log("inside handler");
+  console.log("inside handler");
 });
 console.log("outside handler");
 ```
@@ -119,41 +117,41 @@ console.log("outside handler");
 > 
 > inside handler
 
-## 4. 
+==> `outside handler` sẽ được in ra trước bất kỳ bạn để nó ở sau `$(function(){...})`
+
+## 4. Đính kèm events and thao tác `DOM` bên trong `ready()`
 
 Example uses of $(document).ready():
 
-### 1. Attaching event handlers
-
-  Attach jQuery event handlers
+### 1. Đính kèm xử lý sự kiện
 
   ```js
   $(document).ready(function() {
-  $("button").click(function() {
-  // Code for the click function  
-  });
+    $("button").click(function() {
+    // Thực thi khi click chuột vào
+    });
   });
   ```
 
-### 2. Run jQuery code after the page structure is created
+### 2. Chạy jQuery khi cấu trúc trang đã tạo 
 
 ```js
 jQuery(function($) {
-  // set the value of an element.
+  // Đặt giá trị cho phần tử
   $("#myElement").val("Hello");
 });
 ```
 
-### 3. Manipulate the loaded DOM structure
+### 3. Thao tác với cấu trúc `DOM` đã tải
 
-For example: hide a div when the page loads for the first time and show it on the click event of a button
+**VÍ DỤ**: Ẩn thẻ khi trang vừa tải xong, và hiện nó khi click vào nút *button*
 
 ```js
 $(document).ready(function() {
-$("#toggleDiv").hide();
-$("button").click(function() {
-$("#toggleDiv").show();
-});
+  $("#toggleDiv").hide();
+  $("button").click(function() {
+    $("#toggleDiv").show();
+  });
 });
 ```
 
